Fixing link tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Home Page</title>
-  <link href="/styles/styles.css" rel="stylesheet" />
+  <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
   <img src="Images/HolidayExpressLogo.jpg" height="300">
