--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Home Page</title>
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
-<body>
-  <img src="Images/HolidayExpressLogo.jpg" height="300">
+<body>es
+  <img src="/ExpressHolidays/images/logo.jpg" height="300">
   <center>
   <h1>Holiday Express<h1>
   <a Href="index.html"> Home</a>
