--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Home Page</title>
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
-<body>es
+<body>
   <img src="/ExpressHolidays/images/logo.jpg" height="300">
   <center>
   <h1>Holiday Express<h1>
