--- a/destination1.html
+++ b/destination1.html
@@ -1,24 +1,22 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-<left>
-<img src="Images/HolidayExpressLogo.jpg"/ height="300">
-</left>
-<title>Bar Harbor, Maine</title>
-<center>
+  <title>Bar Harbor, ME</title>
+  <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
-<h1>Bar Harbor, Maine<h1>
-<a Href="index.html"> Home</a>
-<a Href="destination1.html"> Bar Harbor, Maine </a>
-<a Href="destination2.html"> Canadian Rockies Lodge</a>
-<a Href="destination3.html"> Grand Canyon</a>
-<a Href="destination4.html"> Paris</a>
-<a Href="contact.html"> Contact Us</a>
-</center>
-<video width="1280" height"720" controls>
-<source src="Videos/Bar-Harbor.mp4" type="video/mp4">
-</video>
 <body>
+  <img src="/ExpressHolidays/images/logo.jpg" height="300">
+  <center>
+  <h1>Bar Harbor, ME<h1>
+  <a Href="index.html"> Home</a>
+  <a Href="destination1.html"> Bar Harbor, Maine </a>
+  <a Href="destination2.html"> Canadian Rockies Lodge</a>
+  <a Href="destination3.html"> Grand Canyon</a>
+  <a Href="destination4.html"> Paris</a>
+  <a Href="contact.html"> Contact Us</a>
+  </center>
+
 
 </body>
 </html>
