--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
+
+<!DOCTYPE html>
+<html>
 <head>
-<left>
-<img src="Images/HolidayExpressLogo.jpg"/ height="300">
-</left>
-<title>Contact Us</title>
+  <title>Contact Us</title>
+  <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
-<center>
-</head>
-<h1>Contact Us<h1>
-<a Href="index.html"> Home</a>
-<a Href="destination1.html"> Bar Harbor, Maine </a>
-<a Href="destination2.html"> Canadian Rockies Lodge</a>
-<a Href="destination3.html"> Grand Canyon</a>
-<a Href="destination4.html"> Paris</a>
-<a Href="contact.html"> Contact Us</a>
-</center>
 <body>
+  <img src="/ExpressHolidays/images/logo.jpg" height="300">
+  <center>
+  <h1>Holiday Express<h1>
+  <a Href="index.html"> Home</a>
+  <a Href="destination1.html"> Bar Harbor, Maine </a>
+  <a Href="destination2.html"> Canadian Rockies Lodge</a>
+  <a Href="destination3.html"> Grand Canyon</a>
+  <a Href="destination4.html"> Paris</a>
+  <a Href="contact.html"> Contact Us</a>
+  </center>
+
 
 </body>
 </html>
