--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="left">
       <div class="logo">
         <img src="/ExpressHolidays/images/logo.jpg" height="300">
+        <width: 100px;>
       </div>
       <div class="sidebar">
       </div>
