--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <div class="container">
     <div class="left">
       <div class="logo">
-        <img src="/ExpressHolidays/images/logo.jpg" height="300">
-        <width: 100px;>
+        <img src="/ExpressHolidays/images/logo.jpg" height="300" width="200">
+
       </div>
       <div class="sidebar">
       </div>
