--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="left">
       <div class="logo">
-        <img src="/ExpressHolidays/images/logo.jpg" height="250" width="235">
+        <img src="/ExpressHolidays/images/logo.jpg" width="200">
 
       </div>
       <div class="sidebar">
