--- a/destination1.html
+++ b/destination1.html
@@ -6,16 +6,33 @@
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
-  <img src="/ExpressHolidays/images/logo.jpg" height="300">
-  <center>
-  <h1>Bar Harbor, ME<h1>
-  <a Href="index.html"> Home</a>
-  <a Href="destination1.html"> Bar Harbor, Maine </a>
-  <a Href="destination2.html"> Canadian Rockies Lodge</a>
-  <a Href="destination3.html"> Grand Canyon</a>
-  <a Href="destination4.html"> Paris</a>
-  <a Href="contact.html"> Contact Us</a>
-  </center>
+  <div class="container">
+    <div class="left">
+      <div class="logo">
+        <img src="/ExpressHolidays/images/logo.jpg" width="200">
+
+      </div>
+      <div class="sidebar">
+      </div>
+    </div>
+    <div class="right">
+      <div class="navigation">
+        <a href="index.html"> Home</a>
+        <a Href="destination1.html"> Bar Harbor, Maine </a>
+        <a Href="destination2.html"> Canadian Rockies Lodge</a>
+        <a Href="destination3.html"> Grand Canyon</a>
+        <a Href="destination4.html"> Paris</a>
+        <a Href="contact.html"> Contact Us</a>
+
+      </div>
+      <div class="content">
+      </div>
+
+    </div>
+  </div>
+
+
+
 
 
 </body>
