--- a/destination1.html
+++ b/destination1.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="right">
-      <div class="navigation">
+      <div class="navigation navigation-barharbor">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor, Maine </a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
