Changed destination navs +footer

--- a/destination2.html
+++ b/destination2.html
@@ -5,6 +5,33 @@
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
+  <div class="container">
+    <div class="left">
+      <div class="logo">
+        <img src="/ExpressHolidays/images/logo.jpg" width="200">
+
+      </div>
+      <div class="sidebar">
+      </div>
+    </div>
+    <div class="right">
+      <div class="navigation navigation-canada>
+        <a href="index.html"> Home</a>
+        <a Href="destination1.html"> Bar Harbor, Maine </a>
+        <a Href="destination2.html"> Canadian Rockies Lodge</a>
+        <a Href="destination3.html"> Grand Canyon</a>
+        <a Href="contact.html"> Contact Us</a>
+
+      </div>
+      <div class="content">
+      </div>
+
+    </div>
+  </div>
+
+
+
+
 
 </body>
 </html>
