Fixed "" on canada des2

--- a/destination2.html
+++ b/destination2.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="right">
-      <div class="navigation navigation-canada>
+      <div class="navigation navigation-canada">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor, Maine </a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
