--- a/destination1.html
+++ b/destination1.html
@@ -12,6 +12,7 @@
 
       </div>
       <div class="sidebar">
+          <img src="/ExpressHolidays/images/express/barharbor/bh2.jpg" width="200">
       </div>
     </div>
     <div class="right">
