--- a/destination3.html
+++ b/destination3.html
@@ -23,8 +23,14 @@
         <a Href="contact.html"> Contact Us</a>
 
       </div>
+
       <div class="content">
+        <audio controls>
+          <source src="/ExpressHolidays/audio/.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
       </div>
+
 
     </div>
   </div>
