--- a/destination1.html
+++ b/destination1.html
@@ -13,6 +13,8 @@
       </div>
       <div class="sidebar">
           <img src="/ExpressHolidays/images/express/barharbor/bh2.jpg" width="200">
+          <img src="/ExpressHolidays/images/express/barharbor/bh3.jpg" width="200">
+          <img src="/ExpressHolidays/images/express/barharbor/bh4.jpg" width="200">
       </div>
     </div>
     <div class="right">
