+videos + paragraph text

--- a/destination1.html
+++ b/destination1.html
@@ -28,7 +28,7 @@
       </div>
       <div class="content">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/bETzScP6Isk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p> Hi there Bob! </p>
+        <p> Insert paragrah for Bar Harbor here </p>
       </div>
 
     </div>
