--- a/destination2.html
+++ b/destination2.html
@@ -12,10 +12,13 @@
 
       </div>
       <div class="sidebar">
+          <img src="/ExpressHolidays/images/express/canada/c2.jpg" width="200">
+          <img src="/ExpressHolidays/images/express/canada/c3.jpg" width="200">
+          <img src="/ExpressHolidays/images/express/canada/c4.jpg" width="200">
       </div>
     </div>
     <div class="right">
-      <div class="navigation navigation-canada">
+      <div class="navigation navigation-barharbor">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor, Maine </a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
@@ -24,6 +27,8 @@
 
       </div>
       <div class="content">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6bY1EpDaJ0c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p> Insert paragraph for Canadian Rockies here </p>
       </div>
 
     </div>
