--- a/destination3.html
+++ b/destination3.html
@@ -12,10 +12,13 @@
 
       </div>
       <div class="sidebar">
+          <img src="/ExpressHolidays/images/express/grandcanyon/gc2.jpg" width="200">
+          <img src="/ExpressHolidays/images/express/grandcanyon/gc2.jpg" width="200">
+          <img src="/ExpressHolidays/images/express/grandcanyon/gc2.jpg" width="200">
       </div>
     </div>
     <div class="right">
-      <div class="navigation navigation-grandcanyon">
+      <div class="navigation navigation-barharbor">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor, Maine </a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
@@ -23,13 +26,17 @@
         <a Href="contact.html"> Contact Us</a>
 
       </div>
-
       <div class="content">
-        <audio controls>
-          <source src="/ExpressHolidays/audio/.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_hoGpYyn4Bs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p> Insert paragraph for Grand Canyon here! </p>
       </div>
+
+    </div>
+  </div>
+
+
+
+
 
 
     </div>
