--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 
       </div>
       <div class="content">
+        <p> Insert intro paragrah for home page here! </p>
       </div>
 
     </div>
     <div class "footer">
-      <p> Disclaimer here!
+      <p> Place disclaimer here! </p>
     </div>
 
-  
+
   </div>
 
 
