Edited BH title!

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <center>
   <h1>Holiday Express<h1>
   <a Href="index.html"> Home</a>
-  <a Href="destination1.html"> Bar Harbor, Maine </a>
+  <a Href="destination1.html"> Bar Harbor</a>
   <a Href="destination2.html"> Canadian Rockies Lodge</a>
   <a Href="destination3.html"> Grand Canyon</a>
   <a Href="destination4.html"> Paris</a>
