--- a/destination3.html
+++ b/destination3.html
@@ -20,7 +20,7 @@
     <div class="right">
       <div class="navigation navigation-barharbor">
         <a href="index.html"> Home</a>
-        <a Href="destination1.html"> Bar Harbor, Maine </a>
+        <a Href="destination1.html"> Bar Harbor</a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
         <a Href="destination3.html"> Grand Canyon</a>
         <a Href="contact.html"> Contact Us</a>
