--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,48 @@
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
-  <img src="/ExpressHolidays/images/logo.jpg" height="300">
-  <center>
-  <h1>Holiday Express<h1>
-  <a Href="index.html"> Home</a>
-  <a Href="destination1.html"> Bar Harbor</a>
-  <a Href="destination2.html"> Canadian Rockies Lodge</a>
-  <a Href="destination3.html"> Grand Canyon</a>
-  <a Href="destination4.html"> Paris</a>
-  <a Href="contact.html"> Contact Us</a>
-  </center>
+  <body>
+    <div class="container">
+      <div class="left">
+        <div class="logo">
+          <img src="/ExpressHolidays/images/logo.jpg" width="200">
+
+        </div>
+        <div class="sidebar">
+            <img src="/ExpressHolidays/images/express/grandcanyon/gc2.jpg" width="200">
+            <img src="/ExpressHolidays/images/express/grandcanyon/gc3.jpg" width="200">
+            <img src="/ExpressHolidays/images/express/grandcanyon/gc4.jpg" width="200">
+        </div>
+      </div>
+      <div class="right">
+        <div class="navigation navigation-barharbor">
+          <a href="index.html"> Home</a>
+          <a Href="destination1.html"> Bar Harbor</a>
+          <a Href="destination2.html"> Canadian Rockies Lodge</a>
+          <a Href="destination3.html"> Grand Canyon</a>
+          <a Href="contact.html"> Contact Us</a>
+
+        </div>
+        <div class="content">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/_hoGpYyn4Bs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <p> Insert paragraph for Grand Canyon here! </p>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
+
+      </div>
+    </div>
+
+
+
+
+
 
 
 </body>
