--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="sidebar">
-            <img src="/ExpressHolidays/images/express" width="200">
+            <img src="/ExpressHolidays/images/express/contactusbutton.png" width="200">
             <img src="/ExpressHolidays/images/express" width="200">
             <img src="/ExpressHolidays/images/express" width="200">
         </div>
