--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="right">
       <div class="navigation">
+        <div class="navigation navigation-default">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor </a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
