--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="right">
-      <div class="navigation">
+      <div class="navigation-navigation-default">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor </a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
