--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
 
         </div>
         <div class="sidebar">
-            <img src="/ExpressHolidays/images/express/contactusbutton.png" width="200">
-            <img src="/ExpressHolidays/images/express" width="200">
-            <img src="/ExpressHolidays/images/express" width="200">
+            <img src="/ExpressHolidays/images/contactusbutton.png" width="200">
+            <img src="/ExpressHolidays/images/" width="200">
+            <img src="/ExpressHolidays/images/" width="200">
         </div>
       </div>
       <div class="right">
-        <div class="navigation navigation-barharbor">
+        <div class="navigation navigation-default">
           <a href="index.html"> Home</a>
           <a Href="destination1.html"> Bar Harbor</a>
           <a Href="destination2.html"> Canadian Rockies Lodge</a>
@@ -31,8 +31,38 @@
 
         </div>
         <div class="content">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/_hoGpYyn4Bs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <iframe width="560" height="315" src="link here" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <p> <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
+  <!-- Identify your business so that you can collect the payments. -->
+  <input type="hidden" name="business" value="herschelgomez@xyzzyu.com">
+
+  <!-- Specify a Buy Now button. -->
+  <input type="hidden" name="cmd" value="_xclick">
+
+  <!-- Specify details about the item that buyers will purchase. -->
+  <input type="hidden" name="item_name" value="Premium Umbrella">
+  <input type="hidden" name="amount" value="50.00">
+  <input type="hidden" name="currency_code" value="USD">
+
+  <!-- Provide a drop-down menu option field. -->
+  <input type="hidden" name="on0" value="Type">Type of umbrella <br />
+  <select name="os0">
+    <option value="Select Type">-- Select Type --</option>
+    <option value="Standard">Standard</option>
+    <option value="Collapsable">Collapsable</option>
+  </select> <br />
+
+  <!-- Display the payment button. -->
+  <input type="image" name="submit" border="0"
+    src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif"
+    alt="Buy Now">
+
+  <img alt="" border="0" width="1" height="1"
+  src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+
+</form>
+ </p>
         </div>
 
       </div>
