--- a/destination2.html
+++ b/destination2.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="right">
-      <div class="navigation navigation-barharbor">
+      <div class="navigation navigation-canada">
         <a href="index.html"> Home</a>
         <a Href="destination1.html"> Bar Harbor</a>
         <a Href="destination2.html"> Canadian Rockies Lodge</a>
@@ -27,8 +27,9 @@
 
       </div>
       <div class="content">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6bY1EpDaJ0c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ru7AJL6HQhs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p> Canadian Rockies paragraphs go here!
+</p>
       </div>
 
     </div>
