--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 
         </div>
         <div class="content">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/_hoGpYyn4Bs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          <p> Insert paragraph for Grand Canyon here! </p>
+
+          <p> Insert paragraph to contact us! </p>
         </div>
 
       </div>
