--- a/destination1.html
+++ b/destination1.html
@@ -28,7 +28,8 @@
       </div>
       <div class="content">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ru7AJL6HQhs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p> Bar Harbor paragraphs go here </p>
+        <p> At Express Holiday, we have the perfect getaway for just about any occasion.  Whether its spending time in Bar Harbor, Maine checking out the Dorr Museum, or the Abbe Museum depicting the culture of the native Wabanaki people.
+          If you want to do some whale watching, biking or kayaking around the beautiful scenery of Sand Beach with a ring of mountains around it, then Bar Harbor is your next batch of relaxation.</p>
       </div>
 
     </div>
