--- a/destination3.html
+++ b/destination3.html
@@ -28,8 +28,9 @@
       </div>
       <div class="content">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ohb8TS3cLyY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p> Grand Canyon paragraphs go here!
- </p>
+        <p> Just the two of you, or the whole family?  Either way, the Yoho National Park can accommodate the situation.  
+  Luxury, log cabins and the Canadian Rockies is a well-deserved getaway for those that dare to see breath taking beauty.
+</p>
       </div>
 
     </div>
