--- a/destination2.html
+++ b/destination2.html
@@ -28,7 +28,8 @@
       </div>
       <div class="content">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/ru7AJL6HQhs?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <p> Canadian Rockies paragraphs go here!
+        <p> Maybe you’re in the mood for all out luxury and technology while gazing at the marvel feat of the Grand Canyon.  Luxurious limo ride with WI-FI and large photographic friendly windows all while relaxing on leather throughout the tour.
+          Fine dining with a private chef creating cousins indicative to the area.  Everything is included meals, snacks, and drinks which include cocktails, beer and wine.
 </p>
       </div>
 
