Changed audio code/no loop

--- a/destination1.html
+++ b/destination1.html
@@ -5,7 +5,7 @@
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
-  <audio src="ExpressHolidays/audio/la_mer.mp3" controls>
+  <embed name="la_mer" src="/audio/ la_mer.mp3" loop="false" hidden="true" autostart="true">
 <p>If you are reading this, it is because your browser does not support the audio element.</p>
 </audio>
   <div class="container">
