--- a/destination1.html
+++ b/destination1.html
@@ -5,7 +5,7 @@
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
-<audio src="/music/good_enough.mp3" controls>
+<audio src="/ExpressHolidays/audio/la_mer.mp3" controls>
 <p>If you are reading this, it is because your browser does not support the audio element.</p>
 </audio>
 <p>If you are reading this, it is because your browser does not support the audio element.</p>
