--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,10 @@
 
         </div>
         <div class="content">
-<<<<<<< HEAD
+
 
           <p> Do any of these wonderful vacations make it on your calendar? To find out more, please call us at 1(912)864-2676! And we would be happy to assist you in booking your next paradise!</p>
-=======
-          <iframe width="560" height="315" src="link here" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
 
@@ -44,12 +43,12 @@
     <input type="text" name="firstname" value="Dr.Kim">
     <br>
     Last name:<br>
-    <input type="text" name="lastname" value="Nixon>
+    <input type="text" name="lastname" value="Nixon">
     <br><br>
     <input type="submit" value="Submit">
   </form>
  </p>
->>>>>>> aaeffc413493e0467023ff9d47651a20aadbc22a
+
         </div>
 
       </div>
