--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
 
-  <form action="/https://www.paypal.com/signin?returnUri=https%3A%2F%2Fwww.paypal.com%2Fmyaccount&state=%2Fhome" target="_blank">
+  <form action="/https://www.paypal.com" target="_blank">
     First name:<br>
     <input type="text" name="firstname" value="Dr.Kim">
     <br>
