--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
 
         </div>
         <div class="sidebar">
-            <img src="/ExpressHolidays/images/contactusbutton.png" width="200">
-            <img src="/ExpressHolidays/images/" width="200">
+            <img src="/ExpressHolidays/images/contact/jenny.jpg" width="200">
+            <img src="/ExpressHolidays/images/contact/gerald.jpg" width="200">
             <img src="/ExpressHolidays/images/" width="200">
         </div>
       </div>
