--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <div class="content">
 
 
-          <p> Do any of these wonderful vacations make it on your calendar? To find out more, please call us at 1(912)864-2676! And we would be happy to assist you in booking your next paradise!</p>
+          <p> Do any of these wonderful vacations make it on your calendar? To find out more, please call us at 1(912)864-2676! And we would be happy to assist you in booking your next adventure!</p>
 
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
@@ -44,6 +44,8 @@
     <br>
     Last name:<br>
     <input type="text" name="lastname" value="Nixon">
+    Email:<br>
+    <input type="text" name="email address" value="webdesign@southuniversity.edu">
     <br><br>
     <input type="submit" value="Submit">
   </form>
