--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
     <input type="text" name="email address" value="webdesign@southuniversity.edu">
     <br><br>
     <input type="submit" value="Submit">
+    <br>
+    Comments: <br>
+    <input type="text" name="comments" value="Ex: Please let's thank Prof. Nixon for everything she has done. *clapping is welcomed!">
   </form>
  </p>
 
