--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,12 @@
     <br>
     Email:<br>
     <input type="text" name="email address" value="webdesign@southuniversity.edu">
-    <br><br>
-    <input type="submit" value="Submit">
     <br>
     Comments: <br>
-    <input type="text" name="comments" value="Ex: Please let's thank Prof. Nixon for everything she has done. *clapping is welcomed!">
+    <input type="text" name="comments" value="Ex: Please thank Dr. Nixon!">
+    <br><br>
+    <input type="submit" value="Submit">
+
   </form>
  </p>
 
