--- a/contact.html
+++ b/contact.html
@@ -38,31 +38,9 @@
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
 
-  <form method='post'>
-    Name: <input type='text' name='name' id='name' /><br />
-
-    Email: <input type='text' name='email' id='email' /><br />
-
-    Website: <input type='text' name='website' id='website' /><br />
-
-    Comment:<br />
-    <textarea name='comment' id='comment'></textarea><br />
-
-    <input type='hidden' name='articleid' id='articleid' value='<? echo $_GET["id"]; ?>' />
-
-    <input type='submit' value='Submit' />
-  </form>
-
-
-
-
-
-
-
-
   <form action="https://www.paypal.com" target="_blank">
     First name:<br>
-    <input type="text" name="firstname" value=autocomplete=">
+    <input type="text" name="firstname" value="">
     <br>
     Last name:<br>
     <input type="text" name="lastname" value="">
