--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
 
-  <form action="https://www.paypal.com" target="_blank">
+  <form action="https://www.paypal.com/us/home" target="_blank">
     First name:<br>
     <input type="text" name="firstname" value="">
     <br>
@@ -48,7 +48,7 @@
     Email:<br>
     <input type="text" name="email address" value="">
     <br>
-    Comment:<br />
+    Comment:<br/>
     <textarea name='comment' id='comment'></textarea><br/>
     <input type='hidden' name='articleid' id='articleid' value='<? echo $_GET["id"]; ?>' />
     <br><br>
