--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
 
-  <form action="https://www.paypal.com/us/home" target="_blank">
+  <form action="https://www.paypal.com/signin?country.x=US&locale.x=en_US" target="_blank">
     First name:<br>
     <input type="text" name="firstname" value="">
     <br>
