--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
     </div>
     <div class="footer">
-      <footer>
-        <p>Express Holidays is a course project and is not a real travel agency. The site is solely used for educational training for website development for the students of South University’s ITS2111 SV10 Multimedia Web Development.  It has no affiliation with Bar Harbor, the Canadian Rocky Mountain Lodge or the Grand Canyon. None of the services or promotions offered by Express Holidays are endorsed by the locations featured on the website.  Any travel packages offered on the site are not recognized by any transportation agencies, hotels, or rental company advertised on the site</p>
-        </footer>
+
     </div>
 
 
   </div>
 
-
+  <footer>
+    <p>Express Holidays is a course project and is not a real travel agency. The site is solely used for educational training for website development for the students of South University’s ITS2111 SV10 Multimedia Web Development.  It has no affiliation with Bar Harbor, the Canadian Rocky Mountain Lodge or the Grand Canyon. None of the services or promotions offered by Express Holidays are endorsed by the locations featured on the website.  Any travel packages offered on the site are not recognized by any transportation agencies, hotels, or rental company advertised on the site</p
+    </footer>
 
 
 
