--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
         </div>
       </div>
       <div class="right">
+        <div c
         <div class="navigation navigation-default">
           <a href="index.html"> Home</a>
           <a Href="destination1.html"> Bar Harbor</a>
