--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
       </div>
       <div class="content">
 <p> A vacation comes around maybe once a year for a mediocre break.  Here at Express Holiday, we ensure you GET AWAY!!! from the hustle and bustle of the everyday grind and just relax in the setting and location of your choosing.  You will feel like a brand new you after a getaway with Express Holiday.  You will breathe some of the cleanest air and drink some of the purest water on Earth while unwinding from the turmoil of everyday life as you sightsee in Bar Harbor, Maine.  Dive into the essence of limitless terrain gawking at the natural detailed record of its existence.  Feel, for the first time, the luxury and technological advances while taking it easy and relish the tour through the Grand Canyon.  Meal prep and cooking is the job of your private chef and not you, one of the many benefits when reserving with Express Holiday.  Experience the seclusion of the Canadian Rockies while tucked away in the coziness of an exquisite log cabin without a care in the world.
- </p>
+ </p
+ <p> This is where Jammarl's second paragraph should be. So until another parapgraph has been given to me.. this is a place holder to get the disclaimer to go toward the bottom where it should go. blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..
+   blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk..blah bleh blah bleh blah..talk talk talk.. <p>
+
       </div>
 
-    </div>
-    <div class="footer">
 
     </div>
 
@@ -37,7 +38,9 @@
   </div>
 
   <footer>
-    <p>Express Holidays is a course project and is not a real travel agency. The site is solely used for educational training for website development for the students of South University’s ITS2111 SV10 Multimedia Web Development.  It has no affiliation with Bar Harbor, the Canadian Rocky Mountain Lodge or the Grand Canyon. None of the services or promotions offered by Express Holidays are endorsed by the locations featured on the website.  Any travel packages offered on the site are not recognized by any transportation agencies, hotels, or rental company advertised on the site</p
+    <p>Express Holidays is a course project and is not a real travel agency.</p>
+      <p>The site is solely used for educational training for website development for the students of South University’s ITS2111 SV10 Multimedia Web Development.
+         It has no affiliation with Bar Harbor, the Canadian Rocky Mountain Lodge or the Grand Canyon. None of the services or promotions offered by Express Holidays are endorsed by the locations featured on the website.  Any travel packages offered on the site are not recognized by any transportation agencies, hotels, or rental company advertised on the site</p
     </footer>
 
 
