--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <a Href="contact.html"> Contact Us</a>
 
       </div>
+      <div>
+        <div class= "navigation-Isabella's Planner"->
+            <a href="COVID Plans.html"> Default 2  <a/>
+            <a href="COVID-19 Info.html"> Default 3 <a/>
+            <a href="Safety Requirements.html"> Deafault 3 <a/>
       <div class="content">
 <p> A vacation comes around maybe once a year for a mediocre break.  Here at Express Holiday, we ensure you GET AWAY!!! from the hustle and bustle of the everyday grind and just relax in the setting and location of your choosing.  You will feel like a brand new you after a getaway with Express Holiday.  You will breathe some of the cleanest air and drink some of the purest water on Earth while unwinding from the turmoil of everyday life as you sightsee in Bar Harbor, Maine.  Dive into the essence of limitless terrain gawking at the natural detailed record of its existence.  Feel, for the first time, the luxury and technological advances while taking it easy and relish the tour through the Grand Canyon.  Meal prep and cooking is the job of your private chef and not you, one of the many benefits when reserving with Express Holiday.  Experience the seclusion of the Canadian Rockies while tucked away in the coziness of an exquisite log cabin without a care in the world.
  </p
