--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contact Us</title>
+  <title>Contact Me</title>
   <link href="/ExpressHolidays/styles/styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -34,8 +34,7 @@
         <div class="content">
 
 
-          <p> Do any of these wonderful vacations make it on your calendar? To find out more, please call us at 1(912)864-2676! And we would be happy to assist you in booking your next adventure!</p>
-
+          <p> Enter details/paragraph here </p>
           <h2>Contact Us!</h2>
   <p>When submitting this form, it will direct you to our prefered payment associate;PayPal:</p>
 
